# ChangeLog for sys-apps/superiotool
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2

  20 Nov 2008; Piotr Szymaniak <lazy_bum@o2.pl> superiotool-9999.ebuild:
  Removed useless src_compile.

  27 Oct 2008; Piotr Szymaniak <lazy_bum@o2.pl> superiotool-9999.ebuild:
  Updated.

  13 Aug 2008; Piotr Szymaniak <lazy_bum@o2.pl> superiotool-9999.ebuild:
  Fixed repoman reported errors.

  29 Nov 2007; Piotr Szymaniak <lazy_bum@o2.pl> 
  Added ~amd64 keyword, fixed homepage, added proper "|| die".

*superiotool-9999.ebuild (06 Nov 2007)

  06 Nov 2007; Piotr Szymaniak <lazy_bum@o2.pl>
  +superiotool-9999.ebuild:
  Initial ebuild by Ziga Mlinar (bug #196979) with additional changes.