@@ -1,2 +1,3 @@
-EBUILD superiotool-9999.ebuild 757 RMD160 4fa22075ce0507e63b7a95ae2192c38581e25c1d SHA1 375223e4f9e1eac3e7e03e36cfbc3b5ff9c21a7c SHA256 f2a94b93bf8213b06acb680d313b23f41a7fe20af5b831fa42be4fd893d07076
-MISC ChangeLog 705 RMD160 c9574887a3ff59507d385d9a4ac59db8a7ed82e1 SHA1 a4b75506d0a9acb918b2aef46cf907400fb3481c SHA256 4ff70389891b2df5da79adea731fb0f25df95b148eb1004a45a4de56d948cba5
+EBUILD superiotool-9999.ebuild 746 RMD160 8a8d65763cd6a53a73feab52de2f8637255c668e SHA1 62c167027116fa8c7eaae57c4b407a761adde508 SHA256 12af393d36167129a9bdb7c18a317fe1df71a0795922ab6af0572f63a3fc09d8
+MISC ChangeLog 838 RMD160 6ed501cb54b230705ae78d942f34ee26c05e261f SHA1 0f9e39ecfd45e55fc9cfb7d8921f7384b22522fb SHA256 2d77597ddde2412a92fc6bdfa20e0de7062aed603fb25f0af262fbeff586717b
+MISC metadata.xml 252 RMD160 98e581e345ae7649474731426f74795781bbd896 SHA1 da5d32bd96683be482b926f921805e8cc754f619 SHA256 261fa9fd2ee52f8b5898f381128b854fa20f980d551bc2b6fbabd501f3f01036
