@@ -1,0 +1,10 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+	<herd></herd>
+	<maintainer>
+		<email>szarpaj@grubelek.pl</email>
+		<name>Piotr Szymaniak</name>
+	</maintainer>
+</pkgmetadata>
+
