@@ -1,5 +1,9 @@
 # ChangeLog for sys-apps/superiotool
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+
+  28 Jan 2011; Piotr Szymaniak <szarpaj@grubelek.pl> superiotool-9999.ebuild,
+  +metadata.xml:
+  Removed ~keywords, added metadata.
 
   20 Nov 2008; Piotr Szymaniak <lazy_bum@o2.pl> superiotool-9999.ebuild:
   Removed useless src_compile.
